# sonotabula

./: .dockerignore  .editorconfig  .gitignore  .sample.env  .tool-versions  Dockerfile  LICENSE  Makefile  README.md  TODO.md  bun.lockb  commitlint.config.js  docker-compose.yml  manage.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  ruff.toml
.husky/: commit-msg
api/: admin.py  apps.py  models.py  setup.py  tasks.py  tests.py  urls.py  views.py
api/blocks/: __init__.py
api/filters/: __init__.py  albums.py  base.py  playlist.py  tests.py  tracks.py
api/libs/: constants.py  exceptions.py  helpers.py  params.py  requests.py  responses.py  services.py  tests.py  utils.py
api/migrations/: 0001_initial.py  0002_appuser_spotify_id.py  0002_initial.py  0003_delete_service_remove_appuser_first_name_and_more.py  0003_remove_playlist_libraries_remove_album_libraries_and_more.py  (+47 more)
apps/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
browser/: consumers.py  filters.py  models.py  routing.py  serializers.py  tasks.py  tests.py  urls.py  views.py
cli/: docs.py
client/: TODO.md  bun.lockb  index.html  package.json  tailwind.config.js  tsconfig.json
core/: admin.py  filters.py  mixins.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
doc/: docusaurus.config.ts
docs/: bun.lockb  docusaurus.config.ts  package.json  pnpm-lock.yaml
live/: apps.py  consumers.py  models.py  routing.py  serializers.py  signals.py  tasks.py
server/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
web/: .eslintrc.cjs  .gitignore  bun.lockb  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
(+221 files in other folders)
