[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Owais Jamil"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.1"
djangorestframework = "^3.15.2"
django-stubs = {extras = ["compatible-mypy"], version = "^5.1.0"}
psycopg = {extras = ["binary"], version = "^3.2.2"}
python-dotenv = "^1.0.1"
httpx = "^0.27.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.7"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "server.settings"
